<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.example.shantanu.samlple.Main4Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/firstname"
            android:layout_height="wrap_content" />
       <EditText
           android:id="@+id/fname1"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:background="@drawable/buttononlyborder"
           android:layout_height="match_parent"
           android:paddingLeft="10dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/lastname"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/lname1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/buttononlyborder"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/clinicname"/>
    <EditText
        android:id="@+id/clinic1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/buttononlyborder"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/address"/>

    <EditText
        android:id="@+id/address1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/buttononlyborder"
        android:paddingLeft="10dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/clinictime"/>

    <EditText
        android:id="@+id/clinictime1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/buttononlyborder"
        android:paddingLeft="10dp"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/contactno"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/contact1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/buttononlyborder"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/next"
        android:layout_gravity="right"
        android:onClick="todoctorsetpass"
        android:background="@drawable/buttonborder"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
</LinearLayout>
