<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.example.shantanu.samlple.Patientsetpassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/username"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/uname"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:background="@drawable/buttononlyborder"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/password"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pass"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:inputType="textPassword"
            android:background="@drawable/buttononlyborder"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/confirmpassword"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/cpass"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:inputType="textPassword"
            android:background="@drawable/buttononlyborder"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <ImageView
        android:layout_gravity="center"
        android:id="@+id/ivProfilePic"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/defaultprofile" />
    <Button


        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/buttonborder"
        android:text="@string/createaccount"
        android:onClick="pushCreateAccount"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:text="@string/gotologinpage"
        android:gravity="right"
        android:textColor="#03DAC6"
        android:textStyle="bold"
        android:paddingRight="20dp"
        android:onClick="tologindoctor"
        tools:ignore="OnClick" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>
</LinearLayout>
